// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots InsightWithButton with list 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
        "marginBottom": 20,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 15,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 30,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "opacity": 1,
            "position": "relative",
          },
          Object {
            "transform": Array [
              Object {
                "scaleY": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        accessible={true}
        borderRadius={30}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        opacity={1}
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 30,
              "flexDirection": "column",
              "justifyContent": "flex-start",
              "opacity": 1,
              "width": "100%",
            },
            Object {},
          ]
        }
      >
        <View
          onLayout={[Function]}
        >
          <View
            style={
              Array [
                Object {
                  "paddingBottom": 30,
                  "paddingLeft": 20,
                  "paddingRight": 20,
                  "paddingTop": 22,
                },
                undefined,
              ]
            }
          >
            <Text
              center={true}
              large={true}
              style={
                Array [
                  Object {
                    "color": "#0A1427",
                    "fontFamily": "EuclidCircularB-Regular",
                    "fontSize": 24,
                    "lineHeight": 38,
                    "textAlign": "center",
                    "textAlignVertical": "center",
                  },
                  Array [
                    Object {
                      "color": "#0A1427",
                      "fontFamily": "EuclidCircularB-Medium",
                      "fontSize": 24,
                      "lineHeight": 38,
                      "textAlign": "center",
                      "textAlignVertical": "center",
                    },
                    Array [
                      Object {
                        "marginBottom": 20,
                      },
                      undefined,
                    ],
                  ],
                ]
              }
            >
              Some short title
            </Text>
            <View
              style={
                Array [
                  Object {
                    "marginBottom": 20,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                      "paddingBottom": 8,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 8,
                    },
                    undefined,
                  ]
                }
              >
                <View
                  name="tick-circle"
                  style={
                    Array [
                      Object {
                        "color": "#2AA057",
                        "fontSize": 16,
                        "lineHeight": 24,
                        "marginRight": 8,
                      },
                      undefined,
                    ]
                  }
                />
                <Text
                  regular={true}
                  style={
                    Array [
                      Object {
                        "color": "#0A1427",
                        "fontFamily": "EuclidCircularB-Regular",
                        "fontSize": 14,
                        "lineHeight": 22,
                        "textAlignVertical": "center",
                      },
                      Array [
                        Object {
                          "color": "#8B939E",
                          "flexBasis": 0,
                          "flexGrow": 1,
                          "flexShrink": 1,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                      "paddingBottom": 8,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 8,
                    },
                    undefined,
                  ]
                }
              >
                <View
                  name="tick-circle"
                  style={
                    Array [
                      Object {
                        "color": "#2AA057",
                        "fontSize": 16,
                        "lineHeight": 24,
                        "marginRight": 8,
                      },
                      undefined,
                    ]
                  }
                />
                <Text
                  regular={true}
                  style={
                    Array [
                      Object {
                        "color": "#0A1427",
                        "fontFamily": "EuclidCircularB-Regular",
                        "fontSize": 14,
                        "lineHeight": 22,
                        "textAlignVertical": "center",
                      },
                      Array [
                        Object {
                          "color": "#8B939E",
                          "flexBasis": 0,
                          "flexGrow": 1,
                          "flexShrink": 1,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                </Text>
              </View>
            </View>
            <View
              accessible={true}
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "auto",
                  "backgroundColor": "#007AFF",
                  "borderColor": "#007AFF",
                  "borderRadius": 3,
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "elevation": 1,
                  "flexDirection": "row",
                  "height": 34,
                  "justifyContent": "center",
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "opacity": 1,
                  "paddingBottom": 0,
                  "paddingLeft": 20,
                  "paddingRight": 20,
                  "paddingTop": 0,
                  "shadowColor": "rgba(0,0,0,.12)",
                  "shadowOffset": Object {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 1,
                  "shadowRadius": 7,
                  "width": "auto",
                }
              }
            >
              <Text
                customTheme={
                  Object {
                    "borderWidth": 0,
                    "shadow": true,
                  }
                }
                small={true}
                style={
                  Array [
                    Object {
                      "color": "#0A1427",
                      "fontFamily": "EuclidCircularB-Regular",
                      "fontSize": 12,
                      "lineHeight": 18,
                      "textAlignVertical": "center",
                    },
                    Array [
                      Object {
                        "color": "#0A1427",
                        "fontFamily": "EuclidCircularB-Medium",
                        "fontSize": 12,
                        "lineHeight": 18,
                        "textAlignVertical": "center",
                      },
                      Array [
                        Object {
                          "color": "#FCFDFF",
                          "fontSize": 14,
                          "marginBottom": 0,
                        },
                        undefined,
                      ],
                    ],
                  ]
                }
                theme={
                  Object {
                    "colors": Object {
                      "PPNSurface": "#0a0c78",
                      "PPNText": "#f33726",
                      "accent": "#818EB3",
                      "bitcoinWallet": "#F79319",
                      "border": "#007AFF",
                      "card": "#FFFFFF",
                      "control": "#FCFDFF",
                      "danger": "#ff0005",
                      "indicator": "#F8E71C",
                      "legacyWallet": "#FA574F",
                      "navbarItems": "#D4D9DB",
                      "negative": "#BD573A",
                      "orange": "#f57c00",
                      "positive": "#2AA057",
                      "primary": "#007AFF",
                      "secondaryAccent": "#EBF0F5",
                      "secondaryText": "#8B939E",
                      "smartWallet": "#3C71FE",
                      "smartWalletSurface": "#f3f7ff",
                      "smartWalletText": "#1D24D8",
                      "surface": "#007AFF",
                      "tertiary": "#EBF0F6",
                      "text": "#FCFDFF",
                      "userAvatar": "#d1d9e4",
                      "warning": "#ECA93A",
                    },
                    "current": "lightTheme",
                  }
                }
              >
                Wow, press me!
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots InsightWithButton without list 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
        "marginBottom": 20,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 15,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 30,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "opacity": 1,
            "position": "relative",
          },
          Object {
            "transform": Array [
              Object {
                "scaleY": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        accessible={true}
        borderRadius={30}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        opacity={1}
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 30,
              "flexDirection": "column",
              "justifyContent": "flex-start",
              "opacity": 1,
              "width": "100%",
            },
            Object {},
          ]
        }
      >
        <View
          onLayout={[Function]}
        >
          <View
            style={
              Array [
                Object {
                  "paddingBottom": 30,
                  "paddingLeft": 20,
                  "paddingRight": 20,
                  "paddingTop": 22,
                },
                undefined,
              ]
            }
          >
            <Text
              center={true}
              medium={true}
              style={
                Array [
                  Object {
                    "color": "#0A1427",
                    "fontFamily": "EuclidCircularB-Regular",
                    "fontSize": 16,
                    "lineHeight": 24,
                    "textAlign": "center",
                    "textAlignVertical": "center",
                  },
                  Array [
                    Object {
                      "marginBottom": 20,
                    },
                    undefined,
                  ],
                ]
              }
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.
            </Text>
            <View
              accessible={true}
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "auto",
                  "backgroundColor": "#2AA057",
                  "borderColor": "#EDEDED",
                  "borderRadius": 3,
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "flexDirection": "row",
                  "height": 34,
                  "justifyContent": "center",
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "opacity": 1,
                  "paddingBottom": 0,
                  "paddingLeft": 20,
                  "paddingRight": 20,
                  "paddingTop": 0,
                  "width": "auto",
                }
              }
            >
              <Text
                customTheme={
                  Object {
                    "borderWidth": 0,
                  }
                }
                small={true}
                style={
                  Array [
                    Object {
                      "color": "#0A1427",
                      "fontFamily": "EuclidCircularB-Regular",
                      "fontSize": 12,
                      "lineHeight": 18,
                      "textAlignVertical": "center",
                    },
                    Array [
                      Object {
                        "color": "#0A1427",
                        "fontFamily": "EuclidCircularB-Medium",
                        "fontSize": 12,
                        "lineHeight": 18,
                        "textAlignVertical": "center",
                      },
                      Array [
                        Object {
                          "color": "#FCFDFF",
                          "fontSize": 14,
                          "marginBottom": 0,
                        },
                        undefined,
                      ],
                    ],
                  ]
                }
                theme={
                  Object {
                    "colors": Object {
                      "PPNSurface": "#0a0c78",
                      "PPNText": "#f33726",
                      "accent": "#818EB3",
                      "bitcoinWallet": "#F79319",
                      "border": "#EDEDED",
                      "card": "#FFFFFF",
                      "control": "#FCFDFF",
                      "danger": "#ff0005",
                      "indicator": "#F8E71C",
                      "legacyWallet": "#FA574F",
                      "navbarItems": "#D4D9DB",
                      "negative": "#BD573A",
                      "orange": "#f57c00",
                      "positive": "#2AA057",
                      "primary": "#007AFF",
                      "secondaryAccent": "#EBF0F5",
                      "secondaryText": "#8B939E",
                      "smartWallet": "#3C71FE",
                      "smartWalletSurface": "#f3f7ff",
                      "smartWalletText": "#1D24D8",
                      "surface": "#2AA057",
                      "tertiary": "#EBF0F6",
                      "text": "#FCFDFF",
                      "userAvatar": "#d1d9e4",
                      "warning": "#ECA93A",
                    },
                    "current": "lightTheme",
                  }
                }
              >
                Wow, press me!
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
